Fixed the footer tag position on mobile devices, from fixed -> fluid

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -549,10 +549,6 @@ video {
   position: fixed;
 }
 
-.relative {
-  position: relative;
-}
-
 .bottom-4 {
   bottom: 1rem;
 }
@@ -569,8 +565,26 @@ video {
   top: 1rem;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .mt-4 {
@@ -593,6 +607,10 @@ video {
   height: auto;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -601,44 +619,40 @@ video {
   min-height: 100vh;
 }
 
-.w-\[260px\] {
-  width: 260px;
+.w-\[160px\] {
+  width: 160px;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-\[160px\] {
-  width: 160px;
-}
-
 .w-\[\] {
   width: ;
 }
 
-.w-\[344\] {
-  width: 344;
+.w-\[395\] {
+  width: 395;
+}
+
+.w-\[395px\] {
+  width: 395px;
 }
 
 .max-w-80 {
   max-width: 20rem;
 }
 
-.max-w-\[420px\] {
-  max-width: 420px;
+.max-w-\[344px\] {
+  max-width: 344px;
 }
 
 .max-w-\[\] {
   max-width: ;
 }
 
-.max-w-\[344\] {
-  max-width: 344;
-}
-
-.max-w-\[344px\] {
-  max-width: 344px;
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 
 .cursor-default {
@@ -704,12 +718,13 @@ video {
   background-color: rgb(255 190 0 / var(--tw-bg-opacity));
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -726,8 +741,9 @@ video {
   line-height: 1rem;
 }
 
-.text-\[14px\] {
-  font-size: 14px;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -750,14 +766,14 @@ video {
   line-height: 1.5rem;
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-pink {
   --tw-text-opacity: 1;
   color: rgb(255 96 140 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -774,38 +790,12 @@ video {
   transition-duration: 700ms;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
-}
-
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
 
 .hover\:no-underline:hover {
   text-decoration-line: none;
-}
-
-.active\:font-bold:active {
-  font-weight: 700;
-}
-
-@media (min-width: 640px) {
-  .sm\:fixed {
-    position: fixed;
-  }
-
-  .sm\:w-\[160px\] {
-    width: 160px;
-  }
-
-  .sm\:w-\[\] {
-    width: ;
-  }
-
-  .sm\:p-4 {
-    padding: 1rem;
-  }
 }
 
 @media (min-width: 768px) {
@@ -817,12 +807,12 @@ video {
     display: block;
   }
 
-  .md\:w-\[260px\] {
-    width: 260px;
+  .md\:hidden {
+    display: none;
   }
 
-  .md\:w-\[160px\] {
-    width: 160px;
+  .md\:w-\[260px\] {
+    width: 260px;
   }
 
   .md\:max-w-\[420px\] {
@@ -832,34 +822,9 @@ video {
   .md\:p-0 {
     padding: 0px;
   }
-
-  .md\:text-center {
-    text-align: center;
-  }
-
-  .md\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:fixed {
-    position: fixed;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[260\] {
-    width: 260;
-  }
-
-  .lg\:w-\[260px\] {
-    width: 260px;
-  }
-
   .lg\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
